00-iac/argo-apps/kustomize/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-01
  namespace: default
  annotations:
    alb.networking.azure.io/alb-namespace: default
    alb.networking.azure.io/alb-name: main
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
